packages/shared/src/styles/base.css
html, #daily-companion-wrapper {
  background: var(--theme-background-default);
  color: var(--theme-text-primary);
  height: stretch;
}

body {
  min-width: 20rem;
  overflow-y: scroll;
  min-height: 100vh;
  /* mobile viewport bug fix */
  min-height: stretch;

  &.ReactModal__Body--open {
    overflow: hidden;
  }

  &.ReactModal__Body--open .ReactModal__Content,
  &.ReactModal__Body--open .ReactModal__Content > * {
    overscroll-behavior-y: none;
  }

  &.companion {
    min-width: auto;
    overflow: hidden;
  }

  &.hidden-scrollbar {
    overflow: hidden;

    @screen laptop {
      padding-right: 0.5rem;
    }
  }

  overflow-x: hidden;

  @apply antialiased;
  @screen mobileL {
    display: flex;
    flex-direction: column;
  }

  @screen laptop {
    display: block;
  }
}
/* ... */

